# email_subscription_service

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
tests/: health_check.rs
