[package]
name = "email-subscriptions-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_subscriptions_backend"

[dependencies]
actix-web = "4"
actix-rt = "2"

[dev-dependencies]
reqwest = "0.11"
tokio = "1.17"